push get trustcontract
